--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -13,10 +13,11 @@
 
   .nav-links-container {
     width: 50%;
-    height: 130%;
+    height: 135%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    padding-right: 10px;
 
     .nav-link {
       padding: 10px 15px;
